--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
@@ -16,6 +16,7 @@
     </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions>
+      <Composition Key="6e9127cb-0718-4349-b564-467a206d656a">hero</Composition>
       <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
     </Compositions>
     <DefaultTemplate>Products</DefaultTemplate>
@@ -69,38 +70,6 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
-      <Tab Alias="hero">Hero</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>0daa3b20-b2bf-452e-a964-fef13308fef6</Key>
-      <Name>Heading</Name>
-      <Alias>heroHeading</Alias>
-      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
-      <Type>Umbraco.TextBox</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="hero">Hero</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>9713ce6f-7466-450c-b563-345aaf32b312</Key>
-      <Name>Introduction</Name>
-      <Alias>heroIntroduction</Alias>
-      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
-      <Type>Umbraco.TinyMCE</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
       <Tab Alias="hero">Hero</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
