--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/contentpage.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/contentpage.config
@@ -15,13 +15,41 @@
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
     <Folder>Pages</Folder>
-    <Compositions />
+    <Compositions>
+      <Composition Key="6e9127cb-0718-4349-b564-467a206d656a">hero</Composition>
+      <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
+    </Compositions>
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
   </Info>
   <Structure>
     <ContentType Key="f7d2df8e-d476-40b5-9ebe-3a02a0352aaa" SortOrder="0">contentPage</ContentType>
   </Structure>
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>ad8b88f7-7679-4a76-a67b-019baa4fab4e</Key>
+      <Name>Content Blocks</Name>
+      <Alias>contentBlocks</Alias>
+      <Definition>0f34f4ba-d406-4504-918c-53da6d29e426</Definition>
+      <Type>Umbraco.BlockList</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>4ea52107-c0fd-4ef0-bd89-043718cadd07</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>1</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
