--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
@@ -24,9 +24,9 @@
     </AllowedTemplates>
   </Info>
   <Structure>
-    <ContentType Key="fe6014e9-b08a-4dcd-9b97-af02cd2d1fcf" SortOrder="0">products</ContentType>
-    <ContentType Key="bad694bd-0633-480e-a17d-2dbf83dc795e" SortOrder="1">basket</ContentType>
-    <ContentType Key="f7d2df8e-d476-40b5-9ebe-3a02a0352aaa" SortOrder="2">contentPage</ContentType>
+    <ContentType Key="d9748d9d-5324-4cd8-a9c8-f72cc629ef92" SortOrder="0">article</ContentType>
+    <ContentType Key="f7d2df8e-d476-40b5-9ebe-3a02a0352aaa" SortOrder="1">contentPage</ContentType>
+    <ContentType Key="fe6014e9-b08a-4dcd-9b97-af02cd2d1fcf" SortOrder="2">products</ContentType>
   </Structure>
   <GenericProperties>
     <GenericProperty>
