--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentPicker.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentPicker.config
@@ -8,6 +8,6 @@
   <Config><![CDATA[{
   "IgnoreUserStartNodes": false,
   "ShowOpenButton": false,
-  "StartNodeId": null
+  "StartNodeId": "umb://document/64837c0645a041089d97a64c1cf74240"
 }]]></Config>
 </DataType>
