Moved to backoffice

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
@@ -77,21 +77,24 @@
 }]]></Value>
     </heroButtons>
     <heroHeading>
-      <Value><![CDATA[Our Gorgeous Selection]]></Value>
+      <Value><![CDATA[]]></Value>
     </heroHeading>
     <heroIntroduction>
-      <Value><![CDATA[<p><span class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et magna purus. Nullam lobortis id ex in finibus. Proin id ornare lacus, nec volutpat elit. Fusce nec nulla est. </span></p>]]></Value>
+      <Value><![CDATA[]]></Value>
     </heroIntroduction>
     <introduction>
       <Value><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>]]></Value>
     </introduction>
+    <maximum>
+      <Value><![CDATA[9]]></Value>
+    </maximum>
     <metaData>
       <Value><![CDATA[{
-  "title": "Our Gorgeous Selection",
-  "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et magna purus. Nullam lobortis id ex in finibus. Proin id ornare lacus, nec volutpat elit. Fusce nec nulla est. ",
+  "title": "Shop",
+  "description": "",
   "noIndex": false,
-  "shareTitle": "Our Gorgeous Selection",
-  "shareDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et magna purus. Nullam lobortis id ex in finibus. Proin id ornare lacus, nec volutpat elit. Fusce nec nulla est. ",
+  "shareTitle": "Shop",
+  "shareDescription": "",
   "shareImage": null,
   "shareImageUrl": null,
   "default": {
@@ -106,5 +109,20 @@
   }
 }]]></Value>
     </metaData>
+    <umbracoInternalRedirectId>
+      <Value><![CDATA[]]></Value>
+    </umbracoInternalRedirectId>
+    <umbracoNaviHide>
+      <Value><![CDATA[0]]></Value>
+    </umbracoNaviHide>
+    <umbracoRedirect>
+      <Value><![CDATA[]]></Value>
+    </umbracoRedirect>
+    <umbracoUrlAlias>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlAlias>
+    <umbracoUrlName>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlName>
   </Properties>
 </Content>
