--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
@@ -92,6 +92,22 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>54f15b9c-69ca-4e04-8579-66eaa43cdc1e</Key>
+      <Name>Maximum</Name>
+      <Alias>maximum</Alias>
+      <Definition>fd03d666-363d-4f4c-b68d-f19996e63057</Definition>
+      <Type>Umbraco.Integer</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content/recentProducts">Recent Products</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
