Added content page template

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/about-us.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/about-us.config
@@ -7,7 +7,7 @@
     <ContentType>article</ContentType>
     <CreateDate>2023-08-14T17:34:46</CreateDate>
     <NodeName Default="About Us" />
-    <SortOrder>6</SortOrder>
+    <SortOrder>1</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template Key="57155a99-7c0f-4cd5-a2a1-4d58e44c9e2b">Article</Template>
@@ -47,5 +47,20 @@
 <p>Aliquam massa sem, elementum sit amet placerat non, molestie nec eros. Sed maximus mollis libero, eget fringilla lorem vulputate vel. Nunc auctor, turpis id congue sollicitudin, augue magna lobortis velit, sit amet maximus mauris orci quis dolor. Maecenas gravida vestibulum euismod. Nullam ultricies scelerisque orci quis dignissim. Vestibulum arcu nisl, laoreet porta efficitur et, vulputate et odio. In fringilla semper nibh, non aliquet tortor dictum eget. Proin in augue lectus. Donec faucibus lorem finibus sagittis consectetur. Donec bibendum erat turpis, in posuere nisl efficitur in. Sed vel gravida augue. Suspendisse potenti. Mauris vel eros pellentesque, blandit ante elementum, egestas quam. Phasellus id velit ac dolor imperdiet condimentum non vel nisl. Ut non metus sollicitudin, iaculis quam nec, imperdiet magna.</p>
 <p>Duis felis turpis, feugiat non ante et, mollis bibendum ante. Donec ac mi at orci accumsan pellentesque in vitae libero. Vivamus accumsan vulputate lorem sed euismod. Donec laoreet vitae neque nec dignissim. Mauris molestie odio leo. Curabitur felis ante, volutpat semper auctor gravida, tristique vitae justo. Etiam ac luctus purus. Etiam fringilla pulvinar vehicula. Praesent eu felis nec massa pulvinar aliquet. In pharetra luctus ullamcorper. Vivamus fringilla magna ut eros sodales aliquam. Maecenas consectetur, enim sit amet convallis lobortis, justo mi tincidunt eros, nec vehicula nunc dolor id nulla. Etiam ac iaculis leo. Aliquam rutrum congue velit in blandit.</p>]]></Value>
     </text>
+    <umbracoInternalRedirectId>
+      <Value><![CDATA[]]></Value>
+    </umbracoInternalRedirectId>
+    <umbracoNaviHide>
+      <Value><![CDATA[]]></Value>
+    </umbracoNaviHide>
+    <umbracoRedirect>
+      <Value><![CDATA[]]></Value>
+    </umbracoRedirect>
+    <umbracoUrlAlias>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlAlias>
+    <umbracoUrlName>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlName>
   </Properties>
 </Content>
