--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -118,5 +118,20 @@
   }
 }]]></Value>
     </metaData>
+    <umbracoInternalRedirectId>
+      <Value><![CDATA[]]></Value>
+    </umbracoInternalRedirectId>
+    <umbracoNaviHide>
+      <Value><![CDATA[1]]></Value>
+    </umbracoNaviHide>
+    <umbracoRedirect>
+      <Value><![CDATA[]]></Value>
+    </umbracoRedirect>
+    <umbracoUrlAlias>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlAlias>
+    <umbracoUrlName>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlName>
   </Properties>
 </Content>
