--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/contentpage.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/contentpage.config
@@ -19,8 +19,10 @@
       <Composition Key="6e9127cb-0718-4349-b564-467a206d656a">hero</Composition>
       <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
     </Compositions>
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
+    <DefaultTemplate>ContentPage</DefaultTemplate>
+    <AllowedTemplates>
+      <Template Key="78f95e32-c034-4a3d-83d9-c9912b65001a">ContentPage</Template>
+    </AllowedTemplates>
   </Info>
   <Structure>
     <ContentType Key="f7d2df8e-d476-40b5-9ebe-3a02a0352aaa" SortOrder="0">contentPage</ContentType>
