--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/cancel-page.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/cancel-page.config
@@ -1,16 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="a8dfcbe9-2927-406b-9f83-c2ad0cd7fdce" Alias="Cancel Page" Level="2">
-  <Info>
-    <Parent Key="64837c06-45a0-4108-9d97-a64c1cf74240">Home</Parent>
-    <Path>/Home/CancelPage</Path>
-    <Trashed>false</Trashed>
-    <ContentType>contentPage</ContentType>
-    <CreateDate>2023-08-14T15:51:02</CreateDate>
-    <NodeName Default="Cancel Page" />
-    <SortOrder>3</SortOrder>
-    <Published Default="true" />
-    <Schedule />
-    <Template />
-  </Info>
-  <Properties />
-</Content>
+<Empty Key="a8dfcbe9-2927-406b-9f83-c2ad0cd7fdce" Alias="Cancel Page" Change="Delete" Level="101" />
