--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/success-page_5lfhtqhh.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/success-page_5lfhtqhh.config
@@ -1,24 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="46e89b53-2b09-4701-807c-84049bbeecef" Alias="Basket" Level="2">
+<Content Key="c079cbfa-78e7-4d3a-b75b-27613ea6c4e0" Alias="Success Page" Level="2">
   <Info>
     <Parent Key="64837c06-45a0-4108-9d97-a64c1cf74240">Home</Parent>
-    <Path>/Home/Basket</Path>
+    <Path>/Home/SuccessPage</Path>
     <Trashed>false</Trashed>
-    <ContentType>basket</ContentType>
-    <CreateDate>2023-08-14T14:02:38</CreateDate>
-    <NodeName Default="Basket" />
-    <SortOrder>4</SortOrder>
+    <ContentType>article</ContentType>
+    <CreateDate>2023-08-14T18:09:58</CreateDate>
+    <NodeName Default="Success Page" />
+    <SortOrder>2</SortOrder>
     <Published Default="true" />
     <Schedule />
-    <Template Key="be1b9616-7cfd-4662-8e8e-617099f380ed">Basket</Template>
+    <Template Key="57155a99-7c0f-4cd5-a2a1-4d58e44c9e2b">Article</Template>
   </Info>
   <Properties>
+    <heroHeading>
+      <Value><![CDATA[]]></Value>
+    </heroHeading>
+    <heroIntroduction>
+      <Value><![CDATA[]]></Value>
+    </heroIntroduction>
     <metaData>
       <Value><![CDATA[{
-  "title": "Basket",
+  "title": "Success Page",
   "description": "",
   "noIndex": false,
-  "shareTitle": "Basket",
+  "shareTitle": "Success Page",
   "shareDescription": "",
   "shareImage": null,
   "shareImageUrl": null,
@@ -34,11 +40,14 @@
   }
 }]]></Value>
     </metaData>
+    <text>
+      <Value><![CDATA[]]></Value>
+    </text>
     <umbracoInternalRedirectId>
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
     <umbracoNaviHide>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[0]]></Value>
     </umbracoNaviHide>
     <umbracoRedirect>
       <Value><![CDATA[]]></Value>
