Exclude from search

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/cancel-page_h0ypz4zh.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/cancel-page_h0ypz4zh.config
@@ -23,7 +23,7 @@
       <Value><![CDATA[{
   "title": "Cancel Page",
   "description": "",
-  "noIndex": false,
+  "noIndex": true,
   "shareTitle": "Cancel Page",
   "shareDescription": "",
   "shareImage": null,
