--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/success-page_5lfhtqhh.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/success-page_5lfhtqhh.config
@@ -23,7 +23,7 @@
       <Value><![CDATA[{
   "title": "Success Page",
   "description": "",
-  "noIndex": false,
+  "noIndex": true,
   "shareTitle": "Success Page",
   "shareDescription": "",
   "shareImage": null,
