Added search page

--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
@@ -27,6 +27,7 @@
     <ContentType Key="d9748d9d-5324-4cd8-a9c8-f72cc629ef92" SortOrder="0">article</ContentType>
     <ContentType Key="f7d2df8e-d476-40b5-9ebe-3a02a0352aaa" SortOrder="1">contentPage</ContentType>
     <ContentType Key="fe6014e9-b08a-4dcd-9b97-af02cd2d1fcf" SortOrder="2">products</ContentType>
+    <ContentType Key="01b41d8c-0f21-4989-bb01-ced3a2c27f42" SortOrder="3">search</ContentType>
   </Structure>
   <GenericProperties>
     <GenericProperty>
