--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/search.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/search.config
@@ -1,24 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="46e89b53-2b09-4701-807c-84049bbeecef" Alias="Basket" Level="2">
+<Content Key="bd3f1b5a-1d95-4b19-a9b1-46ba99f540eb" Alias="Search" Level="2">
   <Info>
     <Parent Key="64837c06-45a0-4108-9d97-a64c1cf74240">Home</Parent>
-    <Path>/Home/Basket</Path>
+    <Path>/Home/Search</Path>
     <Trashed>false</Trashed>
-    <ContentType>basket</ContentType>
-    <CreateDate>2023-08-14T14:02:38</CreateDate>
-    <NodeName Default="Basket" />
-    <SortOrder>5</SortOrder>
+    <ContentType>search</ContentType>
+    <CreateDate>2023-08-14T18:14:42</CreateDate>
+    <NodeName Default="Search" />
+    <SortOrder>2</SortOrder>
     <Published Default="true" />
     <Schedule />
-    <Template Key="be1b9616-7cfd-4662-8e8e-617099f380ed">Basket</Template>
+    <Template Key="ece7d152-17de-49ce-9177-98de9329f465">Search</Template>
   </Info>
   <Properties>
+    <heroHeading>
+      <Value><![CDATA[]]></Value>
+    </heroHeading>
+    <heroIntroduction>
+      <Value><![CDATA[]]></Value>
+    </heroIntroduction>
     <metaData>
       <Value><![CDATA[{
-  "title": "Basket",
+  "title": "Search",
   "description": "",
   "noIndex": false,
-  "shareTitle": "Basket",
+  "shareTitle": "Search",
   "shareDescription": "",
   "shareImage": null,
   "shareImageUrl": null,
@@ -38,7 +44,7 @@
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
     <umbracoNaviHide>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[1]]></Value>
     </umbracoNaviHide>
     <umbracoRedirect>
       <Value><![CDATA[]]></Value>
