--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
@@ -1,38 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="46e89b53-2b09-4701-807c-84049bbeecef" Alias="Basket" Level="2">
+<Content Key="751f9588-2cb4-4541-9cac-ba9319807a7b" Alias="Blog" Level="2">
   <Info>
     <Parent Key="64837c06-45a0-4108-9d97-a64c1cf74240">Home</Parent>
-    <Path>/Home/Basket</Path>
+    <Path>/Home/Blog</Path>
     <Trashed>false</Trashed>
-    <ContentType>basket</ContentType>
-    <CreateDate>2023-08-14T14:02:38</CreateDate>
-    <NodeName Default="Basket" />
-    <SortOrder>6</SortOrder>
+    <ContentType>blog</ContentType>
+    <CreateDate>2023-08-14T18:18:54</CreateDate>
+    <NodeName Default="Blog" />
+    <SortOrder>2</SortOrder>
     <Published Default="true" />
     <Schedule />
-    <Template Key="be1b9616-7cfd-4662-8e8e-617099f380ed">Basket</Template>
+    <Template />
   </Info>
   <Properties>
+    <heroHeading>
+      <Value><![CDATA[]]></Value>
+    </heroHeading>
+    <heroIntroduction>
+      <Value><![CDATA[]]></Value>
+    </heroIntroduction>
     <metaData>
-      <Value><![CDATA[{
-  "title": "Basket",
-  "description": "",
-  "noIndex": false,
-  "shareTitle": "Basket",
-  "shareDescription": "",
-  "shareImage": null,
-  "shareImageUrl": null,
-  "default": {
-    "title": "",
-    "description": ""
-  },
-  "share": {
-    "title": "",
-    "description": "",
-    "image": null,
-    "imageUrl": null
-  }
-}]]></Value>
+      <Value><![CDATA[]]></Value>
     </metaData>
     <umbracoInternalRedirectId>
       <Value><![CDATA[]]></Value>
