--- a/UmbCheckout.StarterKit.Web/appsettings.json
+++ b/UmbCheckout.StarterKit.Web/appsettings.json
@@ -20,7 +20,13 @@
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
           "EnableCleanup": true
-        }
+        },
+        "Error404Collection": [
+          {
+            "ContentKey": "be25670b-cdd1-4589-8ab8-9e1a57e9a63b",
+            "Culture": "en-GB"
+          }
+        ]
       }
     }
   }
