Wired up product search

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
@@ -43,7 +43,7 @@
 }]]></Value>
     </contentBlocks>
     <heading>
-      <Value><![CDATA[Recently Added]]></Value>
+      <Value><![CDATA[Our Products]]></Value>
     </heading>
     <heroButtons>
       <Value><![CDATA[{
@@ -86,7 +86,7 @@
       <Value><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>]]></Value>
     </introduction>
     <maximum>
-      <Value><![CDATA[9]]></Value>
+      <Value><![CDATA[3]]></Value>
     </maximum>
     <metaData>
       <Value><![CDATA[{
@@ -109,11 +109,14 @@
   }
 }]]></Value>
     </metaData>
+    <noProductsFoundMessage>
+      <Value><![CDATA[<p>No products could be found matching your search.</p>]]></Value>
+    </noProductsFoundMessage>
     <umbracoInternalRedirectId>
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
     <umbracoNaviHide>
-      <Value><![CDATA[1]]></Value>
+      <Value><![CDATA[0]]></Value>
     </umbracoNaviHide>
     <umbracoRedirect>
       <Value><![CDATA[]]></Value>
