--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/meta.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/meta.config
@@ -55,7 +55,7 @@
     </GenericProperty>
     <GenericProperty>
       <Key>e0e463ba-a25c-4d61-8647-157ebcc58281</Key>
-      <Name>Is Visible</Name>
+      <Name>Hide Page</Name>
       <Alias>umbracoNaviHide</Alias>
       <Definition>055b59c4-f59b-4d46-8862-c74430b1e263</Definition>
       <Type>Umbraco.TrueFalse</Type>
