--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
@@ -98,7 +98,7 @@
       <Alias>maximum</Alias>
       <Definition>fd03d666-363d-4f4c-b68d-f19996e63057</Definition>
       <Type>Umbraco.Integer</Type>
-      <Mandatory>false</Mandatory>
+      <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
@@ -108,8 +108,31 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>11652b04-a75c-49bf-af93-021beec15f22</Key>
+      <Name>No Products Found Message</Name>
+      <Alias>noProductsFoundMessage</Alias>
+      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content/searchResults">Search Results</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Key>167325e8-ce94-4903-b5ae-233d41b6ca80</Key>
+      <Caption>Search Results</Caption>
+      <Alias>content/searchResults</Alias>
+      <Type>Group</Type>
+      <SortOrder>1</SortOrder>
+    </Tab>
     <Tab>
       <Key>2ceb4d71-aa16-4631-954a-00655b085c69</Key>
       <Caption>Recent Products</Caption>
