--- a/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
+++ b/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LazZiya.TagHelpers" Version="6.0.2" />
     <PackageReference Include="MetaMomentum" Version="2.2.0" />
     <PackageReference Include="NestingContently.Umbraco" Version="4.0.0" />
     <PackageReference Include="Our.Umbraco.Community.Contentment" Version="4.4.4" />
