--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
@@ -70,6 +70,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>9dee4910-3081-4ddf-a9fe-b4a34c9f7b29</Key>
+      <Name>Product Category</Name>
+      <Alias>productCategory</Alias>
+      <Definition>2c5f7466-04f0-410d-9088-c931f7ae9a31</Definition>
+      <Type>Umbraco.ContentPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>4</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>94330954-36a4-44d2-a87e-f598c15b917a</Key>
       <Name>Recent Products</Name>
       <Alias>recentProducts</Alias>
@@ -94,7 +110,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>4</SortOrder>
+      <SortOrder>5</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
