--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/products.config
@@ -54,7 +54,7 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
-      <Tab Alias="content/recentProducts">Recent Products</Tab>
+      <Tab Alias="content/products">Products</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -86,7 +86,7 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
-      <Tab Alias="content/recentProducts">Recent Products</Tab>
+      <Tab Alias="content/products">Products</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -94,15 +94,15 @@
     </GenericProperty>
     <GenericProperty>
       <Key>54f15b9c-69ca-4e04-8579-66eaa43cdc1e</Key>
-      <Name>Maximum</Name>
-      <Alias>maximum</Alias>
-      <Definition>fd03d666-363d-4f4c-b68d-f19996e63057</Definition>
-      <Type>Umbraco.Integer</Type>
+      <Name>Maximum Per Page</Name>
+      <Alias>maximumPerPage</Alias>
+      <Definition>a4778127-1b4e-4c47-9bd0-ebd6cc0624e6</Definition>
+      <Type>Umbraco.Slider</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
-      <Tab Alias="content/recentProducts">Recent Products</Tab>
+      <Tab Alias="content/products">Products</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -110,8 +110,8 @@
     </GenericProperty>
     <GenericProperty>
       <Key>11652b04-a75c-49bf-af93-021beec15f22</Key>
-      <Name>No Products Found Message</Name>
-      <Alias>noProductsFoundMessage</Alias>
+      <Name>No Products Message</Name>
+      <Alias>noProductsMessage</Alias>
       <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
       <Type>Umbraco.TinyMCE</Type>
       <Mandatory>true</Mandatory>
@@ -135,8 +135,8 @@
     </Tab>
     <Tab>
       <Key>2ceb4d71-aa16-4631-954a-00655b085c69</Key>
-      <Caption>Recent Products</Caption>
-      <Alias>content/recentProducts</Alias>
+      <Caption>Products</Caption>
+      <Alias>content/products</Alias>
       <Type>Group</Type>
       <SortOrder>0</SortOrder>
     </Tab>
