Started blog framework

--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blog.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blog.config
@@ -27,6 +27,47 @@
   <Structure>
     <ContentType Key="00a320cd-3ed4-47fb-956b-f158974d5916" SortOrder="0">blogPost</ContentType>
   </Structure>
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>ad4f1690-699c-43b9-8a0f-38da1d9dccd8</Key>
+      <Name>Content Blocks</Name>
+      <Alias>contentBlocks</Alias>
+      <Definition>0f34f4ba-d406-4504-918c-53da6d29e426</Definition>
+      <Type>Umbraco.BlockList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>37d01ed7-75ef-456b-82f9-f74abb598bbf</Key>
+      <Name>Maximum Per Page</Name>
+      <Alias>maximumPerPage</Alias>
+      <Definition>a4778127-1b4e-4c47-9bd0-ebd6cc0624e6</Definition>
+      <Type>Umbraco.Slider</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>deb15e6d-7488-4fb5-b65c-2eae26f95bf7</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>2</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
