--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/search.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/search.config
@@ -25,6 +25,31 @@
     </AllowedTemplates>
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>1f7e034f-7531-42d0-9e62-a341db532b51</Key>
+      <Name>No Results Message</Name>
+      <Alias>noResultsMessage</Alias>
+      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>baa4b7c3-1b9d-4102-9498-9b30004898e6</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>2</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
