--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blogpost.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blogpost.config
@@ -25,6 +25,63 @@
     </AllowedTemplates>
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>ebafe714-f853-4f6b-aa1e-a3ee67822fdf</Key>
+      <Name>Categories</Name>
+      <Alias>categories</Alias>
+      <Definition>d1656b41-4d19-44c2-997a-269216e2a42d</Definition>
+      <Type>Umbraco.MultiNodeTreePicker</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>f26c9f87-57e6-434b-845d-eb3094de7d11</Key>
+      <Name>Content</Name>
+      <Alias>content</Alias>
+      <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>f3fa2978-8837-47e9-840c-136a5ff21d23</Key>
+      <Name>Display Date</Name>
+      <Alias>displayDate</Alias>
+      <Definition>5046194e-4237-453c-a547-15db3a07c4e1</Definition>
+      <Type>Umbraco.DateTime</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>426e3645-c3f6-439d-89a6-e4595cb070ac</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>2</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
