Hero's and Blog area

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/about-us.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/about-us.config
@@ -13,6 +13,17 @@
     <Template Key="57155a99-7c0f-4cd5-a2a1-4d58e44c9e2b">Article</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[{
+  "value": "031633",
+  "label": "Primary Subtle",
+  "sortOrder": 1,
+  "id": "2"
+}]]></Value>
+    </backgroundColour>
+    <backgroundImage>
+      <Value><![CDATA[[]]]></Value>
+    </backgroundImage>
     <heroHeading>
       <Value><![CDATA[]]></Value>
     </heroHeading>
@@ -51,7 +62,7 @@
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
     <umbracoNaviHide>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[0]]></Value>
     </umbracoNaviHide>
     <umbracoRedirect>
       <Value><![CDATA[]]></Value>
