--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/basket.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/basket.config
@@ -13,6 +13,23 @@
     <Template Key="be1b9616-7cfd-4662-8e8e-617099f380ed">Basket</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[{
+  "value": "031633",
+  "label": "Primary Subtle",
+  "sortOrder": 1,
+  "id": "2"
+}]]></Value>
+    </backgroundColour>
+    <backgroundImage>
+      <Value><![CDATA[[]]]></Value>
+    </backgroundImage>
+    <heroHeading>
+      <Value><![CDATA[]]></Value>
+    </heroHeading>
+    <heroIntroduction>
+      <Value><![CDATA[]]></Value>
+    </heroIntroduction>
     <metaData>
       <Value><![CDATA[{
   "title": "Basket",
@@ -38,7 +55,7 @@
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
     <umbracoNaviHide>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[0]]></Value>
     </umbracoNaviHide>
     <umbracoRedirect>
       <Value><![CDATA[]]></Value>
