--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
@@ -10,23 +10,67 @@
     <SortOrder>2</SortOrder>
     <Published Default="true" />
     <Schedule />
-    <Template />
+    <Template Key="717b91bf-257b-42ce-a374-7073b7215a0d">Blog</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[{
+  "value": "031633",
+  "label": "Primary Subtle",
+  "sortOrder": 1,
+  "id": "2"
+}]]></Value>
+    </backgroundColour>
+    <backgroundImage>
+      <Value><![CDATA[[]]]></Value>
+    </backgroundImage>
+    <contentBlocks>
+      <Value><![CDATA[]]></Value>
+    </contentBlocks>
+    <heading>
+      <Value><![CDATA[Latest Blog Posts]]></Value>
+    </heading>
     <heroHeading>
       <Value><![CDATA[]]></Value>
     </heroHeading>
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
-    <metaData>
+    <introduction>
       <Value><![CDATA[]]></Value>
+    </introduction>
+    <maximumPerPage>
+      <Value><![CDATA[9]]></Value>
+    </maximumPerPage>
+    <metaData>
+      <Value><![CDATA[{
+  "title": "Blog",
+  "description": "",
+  "noIndex": false,
+  "shareTitle": "Blog",
+  "shareDescription": "",
+  "shareImage": null,
+  "shareImageUrl": null,
+  "default": {
+    "title": "",
+    "description": ""
+  },
+  "share": {
+    "title": "",
+    "description": "",
+    "image": null,
+    "imageUrl": null
+  }
+}]]></Value>
     </metaData>
+    <noPostsMessage>
+      <Value><![CDATA[<p style="text-align: center;">No blog posts could be found matching your search.</p>]]></Value>
+    </noPostsMessage>
     <umbracoInternalRedirectId>
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
     <umbracoNaviHide>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[0]]></Value>
     </umbracoNaviHide>
     <umbracoRedirect>
       <Value><![CDATA[]]></Value>
