--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
@@ -13,6 +13,17 @@
     <Template Key="be79001d-afc3-42dd-bb1c-aa36c8f74911">Products</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[{
+  "value": "031633",
+  "label": "Primary Subtle",
+  "sortOrder": 1,
+  "id": "2"
+}]]></Value>
+    </backgroundColour>
+    <backgroundImage>
+      <Value><![CDATA[[]]]></Value>
+    </backgroundImage>
     <contentBlocks>
       <Value><![CDATA[{
   "layout": {
@@ -85,9 +96,9 @@
     <introduction>
       <Value><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>]]></Value>
     </introduction>
-    <maximum>
+    <maximumPerPage>
       <Value><![CDATA[3]]></Value>
-    </maximum>
+    </maximumPerPage>
     <metaData>
       <Value><![CDATA[{
   "title": "Shop",
@@ -109,9 +120,9 @@
   }
 }]]></Value>
     </metaData>
-    <noProductsFoundMessage>
+    <noProductsMessage>
       <Value><![CDATA[<p>No products could be found matching your search.</p>]]></Value>
-    </noProductsFoundMessage>
+    </noProductsMessage>
     <umbracoInternalRedirectId>
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
