--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
@@ -21,7 +21,7 @@
   {
     "udi": null,
     "description": null,
-    "title": "Section",
+    "title": "Menu",
     "target": null,
     "noopener": false,
     "noreferrer": false,
@@ -38,19 +38,47 @@
         "children": [],
         "icon": "icon-home color-black",
         "published": true,
+        "naviHide": true,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/1435f4ed51a2467c9860d2b9e8092854",
+        "key": "1435f4ed-51a2-467c-9860-d2b9e8092854",
+        "name": "Shop",
+        "description": "/shop/",
+        "title": "Shop",
+        "url": "/shop/",
+        "children": [],
+        "icon": "icon-shipping-box color-black",
+        "published": true,
         "naviHide": false,
         "culture": null,
         "itemType": "link"
       },
       {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
+        "udi": "umb://document/872f8f0b6923407790043275d55ce07f",
+        "key": "872f8f0b-6923-4077-9004-3275d55ce07f",
+        "name": "About Us",
+        "description": "/about-us/",
+        "title": "About Us",
+        "url": "/about-us/",
         "children": [],
-        "icon": "icon-home color-black",
+        "icon": "icon-article color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/751f95882cb445419cacba9319807a7b",
+        "key": "751f9588-2cb4-4541-9cac-ba9319807a7b",
+        "name": "Blog",
+        "description": "/blog/",
+        "title": "Blog",
+        "url": "/blog/",
+        "children": [],
+        "icon": "icon-book color-black",
         "published": true,
         "naviHide": false,
         "culture": null,
@@ -60,42 +88,84 @@
         "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
         "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
         "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
+        "description": "/#",
+        "title": "Contact",
+        "url": "/#",
         "children": [],
         "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link",
+        "anchor": "#"
+      },
+      {
+        "udi": "umb://document/46e89b532b094701807c84049bbeecef",
+        "key": "46e89b53-2b09-4701-807c-84049bbeecef",
+        "name": "Basket",
+        "description": "/basket/",
+        "title": "Basket",
+        "url": "/basket/",
+        "children": [],
+        "icon": "icon-shopping-basket-alt-2 color-black",
         "published": true,
         "naviHide": false,
         "culture": null,
         "itemType": "link"
-      },
+      }
+    ],
+    "icon": "icon-tag",
+    "includeChildNodes": false,
+    "itemType": "nolink"
+  },
+  {
+    "udi": null,
+    "description": null,
+    "title": "Categories",
+    "target": null,
+    "noopener": false,
+    "noreferrer": false,
+    "anchor": null,
+    "url": null,
+    "children": [
       {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
+        "description": "/shop/category/bingo/",
+        "title": "Bingo",
+        "url": "/shop/category/bingo/",
         "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
+        "icon": "icon-link",
         "itemType": "link"
       },
       {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
+        "description": "/shop/category/clothing/",
+        "title": "Clothing",
+        "url": "/shop/category/clothing/",
         "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
+        "icon": "icon-link",
+        "itemType": "link"
+      },
+      {
+        "description": "/shop/category/tattoo/",
+        "title": "Tattoo",
+        "url": "/shop/category/tattoo/",
+        "children": [],
+        "icon": "icon-link",
+        "itemType": "link"
+      },
+      {
+        "description": "/shop/category/sports/",
+        "title": "Sports",
+        "url": "/shop/category/sports/",
+        "children": [],
+        "icon": "icon-link",
+        "itemType": "link"
+      },
+      {
+        "description": "/shop/category/animals/",
+        "title": "Animals",
+        "url": "/shop/category/animals/",
+        "children": [],
+        "icon": "icon-link",
         "itemType": "link"
       }
     ],
@@ -113,105 +183,6 @@
     "anchor": null,
     "url": null,
     "children": [
-      {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
-        "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
-        "itemType": "link"
-      },
-      {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
-        "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
-        "itemType": "link"
-      },
-      {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
-        "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
-        "itemType": "link"
-      },
-      {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
-        "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
-        "itemType": "link"
-      },
-      {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
-        "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
-        "itemType": "link"
-      }
-    ],
-    "icon": "icon-tag",
-    "includeChildNodes": false,
-    "itemType": "nolink"
-  },
-  {
-    "udi": null,
-    "description": null,
-    "title": "Section",
-    "target": null,
-    "noopener": false,
-    "noreferrer": false,
-    "anchor": null,
-    "url": null,
-    "children": [
-      {
-        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
-        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
-        "name": "Home",
-        "description": "/",
-        "title": "Home",
-        "url": "/",
-        "children": [],
-        "icon": "icon-home color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": null,
-        "itemType": "link"
-      },
       {
         "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
         "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
@@ -384,15 +355,24 @@
     "anchor": "",
     "published": true,
     "naviHide": false,
-    "culture": null
+    "culture": null,
+    "id": 1141
   },
   {
-    "description": "#",
+    "description": "/blog/",
     "title": "Blog",
-    "url": "#",
+    "url": "/blog/",
     "children": [],
-    "icon": "icon-link",
-    "itemType": "link"
+    "icon": "icon-book color-black",
+    "itemType": "link",
+    "udi": "umb://document/751f95882cb445419cacba9319807a7b",
+    "key": "751f9588-2cb4-4541-9cac-ba9319807a7b",
+    "name": "Blog",
+    "anchor": "",
+    "published": true,
+    "naviHide": false,
+    "culture": null,
+    "id": 1159
   },
   {
     "description": "#",
