--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blogpost.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blogpost.config
@@ -51,7 +51,7 @@
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
+      <SortOrder>3</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -74,6 +74,38 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>d55c3856-dad4-4278-870f-9918216515c5</Key>
+      <Name>Excerpt</Name>
+      <Alias>excerpt</Alias>
+      <Definition>a8d30e30-c562-49b7-8fd2-f0c393ba4399</Definition>
+      <Type>Umbraco.TextArea</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>04ebde46-dfa3-4e0a-91ee-e603b8d21188</Key>
+      <Name>Image</Name>
+      <Alias>image</Alias>
+      <Definition>a301f29e-56b7-46dd-a8c8-905e989e3a07</Definition>
+      <Type>Umbraco.MediaPicker3</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="hero">Hero</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
@@ -82,6 +114,13 @@
       <Alias>content</Alias>
       <Type>Tab</Type>
       <SortOrder>2</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>7cb2cf2f-3271-48c7-ae9f-d1dc086aee69</Key>
+      <Caption>Hero</Caption>
+      <Alias>hero</Alias>
+      <Type>Tab</Type>
+      <SortOrder>0</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
