--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/contentpage.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/contentpage.config
@@ -17,6 +17,7 @@
     <Folder>Pages</Folder>
     <Compositions>
       <Composition Key="6e9127cb-0718-4349-b564-467a206d656a">hero</Composition>
+      <Composition Key="c18503eb-c34d-4110-acd0-1f79b1c62d48">heroImage</Composition>
       <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
     </Compositions>
     <DefaultTemplate>ContentPage</DefaultTemplate>
