--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
@@ -16,6 +16,7 @@
     </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions>
+      <Composition Key="c18503eb-c34d-4110-acd0-1f79b1c62d48">heroImage</Composition>
       <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
     </Compositions>
     <DefaultTemplate>Product</DefaultTemplate>
@@ -160,7 +161,7 @@
       <Caption>Product Details</Caption>
       <Alias>productDetails</Alias>
       <Type>Tab</Type>
-      <SortOrder>0</SortOrder>
+      <SortOrder>1</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
