--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/RichtextEditor.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/RichtextEditor.config
@@ -12,6 +12,9 @@
       "bold",
       "italic",
       "underline",
+      "alignleft",
+      "aligncenter",
+      "alignright",
       "bullist",
       "numlist",
       "link",
