--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
@@ -13,6 +13,17 @@
     <Template Key="e7c195f1-5312-462c-8950-9b12635f9627">Product</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[{
+  "value": "031633",
+  "label": "Primary Subtle",
+  "sortOrder": 1,
+  "id": "2"
+}]]></Value>
+    </backgroundColour>
+    <backgroundImage>
+      <Value><![CDATA[[]]]></Value>
+    </backgroundImage>
     <categories>
       <Value><![CDATA[umb://document/b05e4c6968b14280bda533b61802a269,umb://document/2a48aecf7d0745fea4f113bd5144342a]]></Value>
     </categories>
@@ -118,5 +129,20 @@
     <umbCheckoutPrice>
       <Value><![CDATA[199]]></Value>
     </umbCheckoutPrice>
+    <umbracoInternalRedirectId>
+      <Value><![CDATA[]]></Value>
+    </umbracoInternalRedirectId>
+    <umbracoNaviHide>
+      <Value><![CDATA[0]]></Value>
+    </umbracoNaviHide>
+    <umbracoRedirect>
+      <Value><![CDATA[]]></Value>
+    </umbracoRedirect>
+    <umbracoUrlAlias>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlAlias>
+    <umbracoUrlName>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlName>
   </Properties>
 </Content>
