--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blog.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blog.config
@@ -17,6 +17,7 @@
     <Folder>Pages</Folder>
     <Compositions>
       <Composition Key="6e9127cb-0718-4349-b564-467a206d656a">hero</Composition>
+      <Composition Key="c18503eb-c34d-4110-acd0-1f79b1c62d48">heroImage</Composition>
       <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
     </Compositions>
     <DefaultTemplate>Blog</DefaultTemplate>
@@ -45,6 +46,38 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>f4718cf1-7453-41f1-b49e-48877acd2575</Key>
+      <Name>Heading</Name>
+      <Alias>heading</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content/blogPosts">Blog Posts</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>48ce631a-917b-42b3-a668-ffb42b16cc60</Key>
+      <Name>Introduction</Name>
+      <Alias>introduction</Alias>
+      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content/blogPosts">Blog Posts</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>37d01ed7-75ef-456b-82f9-f74abb598bbf</Key>
       <Name>Maximum Per Page</Name>
       <Alias>maximumPerPage</Alias>
@@ -53,8 +86,24 @@
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias="content">Content</Tab>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content/blogPosts">Blog Posts</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>b2006b17-136e-4c82-90b0-a1ac34b4bc3d</Key>
+      <Name>No Blog Posts Message</Name>
+      <Alias>noPostsMessage</Alias>
+      <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content/searchResults">Search Results</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -62,6 +111,20 @@
     </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Key>15f2fd75-db10-4bd6-8c59-be960c8299f4</Key>
+      <Caption>Blog Posts</Caption>
+      <Alias>content/blogPosts</Alias>
+      <Type>Group</Type>
+      <SortOrder>-1</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>1783bbf8-17e5-4204-bb0e-4a2c4f2f1646</Key>
+      <Caption>Search Results</Caption>
+      <Alias>content/searchResults</Alias>
+      <Type>Group</Type>
+      <SortOrder>0</SortOrder>
+    </Tab>
     <Tab>
       <Key>deb15e6d-7488-4fb5-b65c-2eae26f95bf7</Key>
       <Caption>Content</Caption>
