--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blogcategories.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blogcategories.config
@@ -14,7 +14,7 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Pages</Folder>
+    <Folder>Collections</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
