--- a/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/add-to-basket-button.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/add-to-basket-button.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Dictionary Key="8b015411-9f53-4f31-955c-0eb8e4ff8312" Alias="Add to Basket Button" Level="0">
-  <Info />
+<Dictionary Key="8b015411-9f53-4f31-955c-0eb8e4ff8312" Alias="Add to Basket Button" Level="1">
+  <Info>
+    <Parent>Products</Parent>
+  </Info>
   <Translations>
     <Translation Language="en-GB">Add to Basket</Translation>
   </Translations>
