--- a/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/category-filter-label.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/category-filter-label.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Dictionary Key="2830837a-df22-4920-a8fc-25f3834311ad" Alias="Category Filter Label" Level="0">
-  <Info />
+<Dictionary Key="2830837a-df22-4920-a8fc-25f3834311ad" Alias="Category Filter Label" Level="1">
+  <Info>
+    <Parent>General</Parent>
+  </Info>
   <Translations>
     <Translation Language="en-GB">Category</Translation>
   </Translations>
