--- a/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/clear-filters-button.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/clear-filters-button.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Dictionary Key="ea991685-2ebc-4b56-b9d6-e18d8d8296da" Alias="Clear Filters Button" Level="0">
-  <Info />
+<Dictionary Key="ea991685-2ebc-4b56-b9d6-e18d8d8296da" Alias="Clear Filters Button" Level="1">
+  <Info>
+    <Parent>General</Parent>
+  </Info>
   <Translations>
     <Translation Language="en-GB">Clear Filters</Translation>
   </Translations>
