--- a/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/search-products-placeholder.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Dictionary/search-products-placeholder.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Dictionary Key="d38c81d7-16cf-46df-872b-693a001a7303" Alias="Search Products Placeholder" Level="0">
-  <Info />
+<Dictionary Key="d38c81d7-16cf-46df-872b-693a001a7303" Alias="Search Products Placeholder" Level="1">
+  <Info>
+    <Parent>Products</Parent>
+  </Info>
   <Translations>
     <Translation Language="en-GB">Search Products</Translation>
   </Translations>
